--- a/profiles/templates/profiles/Bio-form.html
+++ b/profiles/templates/profiles/Bio-form.html
@@ -10,7 +10,7 @@
     <a style="font-size: 20px; text-decoration: none;" href="{% url 'index' %}">Home</a>
     <a style="font-size: 20px; text-decoration: none;" href="{% url 'e_form' %}">EmployForm</a>
     <hr>
-    <h1 style="text-align: center;">Bio-Form </h1>
+    <h1 style="text-align: center;">Bio-Form </h1><hr>
     <form method="POST" action="">{% csrf_token %}
         {{form.as_p}}
         <button type="submit">Submite</button>
